# Rohith-AI-839

./: API_Requests.ipynb  Dockerfile  README.md  Untitled.ipynb  a.py  api_request.py  pyproject.toml  requirements.txt  start_server.py  user_predictions.db
.github/workflows/: ci.yml  ci_run_pipeline.yml  ci_training.yml
.viz/: stats.json
conf/: logging.yml
conf/base/: catalog.yml  hooks.yml  parameters_data_science.yml
data/01_raw/: dataset_id_106.csv  dataset_id_T01_V3_106.csv
docs/source/: conf.py  index.rst
mlruns/0/: meta.yaml
mlruns/497475562666395043/: meta.yaml
mlruns/497475562666395043/0f7508b05dba4470baed89e32e30cf90/: meta.yaml
mlruns/497475562666395043/1385a28468c747d7b32cdb81de030684/: meta.yaml
mlruns/497475562666395043/258ee3375c7b47a195559a743cf76883/: meta.yaml
mlruns/497475562666395043/2a8116850fe84c8e899d44ae7fb2d63c/: meta.yaml
mlruns/497475562666395043/2b105cadf70c4016a8b53ba38e43af71/: meta.yaml
mlruns/497475562666395043/398e6641c49a424f9f6626ca496f2060/: meta.yaml
mlruns/497475562666395043/3f29d1879ca34a5d9012404caef7e071/: meta.yaml
notebooks/: Data_Card.ipynb  Preprocessing.ipynb  Project_Card_TransDerstand.ipynb
quarto/: _quarto.yml  _sidebar.yml  about.quarto_ipynb  objects.json
quarto/_site/: about.html  index.html  search.json
quarto/reference/: DataDriftPreset.qmd  LogisticRegression.qmd  Report.qmd  evaluate_model.qmd  index.qmd  plot_and_save.qmd  prediction_drift_check.qmd  quality_drift_check.qmd  report_plotly.qmd  sklearn.qmd  split_data.qmd  train_model.qmd
src/: hooks.py
src/rohith_ai_839/: __init__.py  __main__.py  pipeline_registry.py  settings.py
tests/: test_run.py
(+224 files in other folders)
